styles/globals.css
:root {
  --color-primary: hsl(350, 85%, 42%);
  --color-primary-opaque: hsl(350 85% 42% / 0.2);
  --color-secondary: #00b2a9;
  --color-tertiary: #f6eb61;
  --color-background: offwhite;
  --color-text: black;
}
html,
body {
  direction: rtl;
  color: var(--color-text);
  background-color: var(--color-background);
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}
main {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 1rem;
  place-items: center;
  width: 100vw;
}
a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-primary: hsl(350, 85%, 25%);
    --color-primary-opaque: hsl(350 85% 42% / 0.2);
    --color-secondary: #00b2a9;
    --color-tertiary: #f6eb61;
    --color-background: hsl(350, 85%, 5%);
    --color-text: white;
  }
  html {
    color-scheme: dark;
  }
  body {
    backdrop-filter: brightness(0.25);
  }
}

